add menu de nav e logo

--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
     <title> eletroBike - bicicletas elétricas </title>
     <meta name="description" content="bicicletas elétricas de alta precisao e qualidade, feita sob medida para voce. explore o mundo na sua velocidade com a elétrobike">
 </head>
-<body>
-    <head>
-        <div>
+<body style="background-color: black;">
+    <head class="header-bg">
+        <div class="header container">
             <a href="#">
-                <img src="" alt="">
+                <img src="img/eletrobike.svg" alt="logo eletrobike">
             </a>
+            <nav aria-label="primaria">
+                <ul class="header-menu font-1-m cor-0">
+                    <li>
+                        <a href="#">bicicletas</a>
+                    </li>
+                    <li>
+                        <a href="#">seguros</a>
+                    </li>
+                    <li>
+                        <a href="#">contatos</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </head>
 </body>
